--- a/style.css
+++ b/style.css
@@ -14,12 +14,20 @@ body {
   min-height: 100vh;
   background: #edf1f4;
 }
+.dark {
+  background: #282c2f;
+}
 .calculator {
   position: relative;
   width: 340px;
   padding: 20px;
   border-radius: 20px;
   box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.1), -15px -15px 20px #fffb;
+}
+.dark .calculator {
+  background: #33393e;
+  box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.25),
+    -15px -15px 20px rgba(255, 255, 255, 0.1);
 }
 .calculator .buttons {
   position: relative;
@@ -42,6 +50,12 @@ body {
   font-size: 2em;
   font-weight: 500;
 }
+.dark .calculator .buttons #value {
+  background: #33393e;
+  color: #eee;
+  box-shadow: inset 15px 15px 20px rgba(0, 0, 0, 0.5),
+    inset -15px -15px 20px rgba(255, 255, 255, 0.1);
+}
 .calculator .buttons span {
   position: relative;
   padding: 10px;
@@ -59,10 +73,22 @@ body {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1), -5px -5px 10px #fff;
   border-radius: 10px;
 }
+.dark .calculator .buttons span {
+  color: #eee;
+  border: 2px solid #333;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1),
+    -5px -5px 10px rgba(255, 255, 255, 0.1);
+}
+
 .calculator .buttons span:active {
   box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.1), inset -5px -5px 10px #fff;
   color: #f44336;
 }
+.dark .calculator .buttons span:active {
+  box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.1),
+    inset -5px -5px 10px rgba(255, 255, 255, 0.1);
+}
+
 .calculator .buttons span#clear {
   grid-column: span 2;
   background: #f44336;
@@ -81,10 +107,40 @@ body {
   color: #fff;
   border: 2px solid #edf1f4;
 }
+.dark .calculator .buttons span#plus,
+.dark .calculator .buttons span#equal,
+.dark .calculator .buttons span#clear {
+  border: 2px solid #333;
+}
 
 .calculator .buttons span#plus:active,
 .calculator .buttons span#equal:active,
 .calculator .buttons span#clear:active {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1), -5px -5px 10px #fff,
     inset 5px 5px 10px rgba(0, 0, 0, 0.1);
+}
+.dark .buttons span#plus:active,
+.dark .buttons span#equal:active,
+.dark .buttons span#clear:active {
+  box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.toggleBtn {
+  position: fixed;
+  padding: 8px 16px;
+  right: 20px;
+  top: 20px;
+  background: #555;
+  border-radius: 12px;
+  color: #fff;
+  cursor: pointer;
+  border: 2px solid #edf1f4;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1), -5px -5px 10px #fff;
+}
+.dark .toggleBtn {
+  background: #edf1f4;
+  border: 2px solid #333;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25),
+    -5px -5px 10px rgba(255, 255, 255, 0.1);
+  color: #666;
 }
