--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   align-items: center;
   min-height: 100vh;
   background: #edf1f4;
+  position: relative;
 }
 .dark {
   background: #282c2f;
@@ -126,6 +127,7 @@ body {
 }
 
 .toggleBtn {
+  font-family: "Rubik", sans-serif;
   position: fixed;
   padding: 8px 16px;
   right: 20px;
@@ -143,4 +145,17 @@ body {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25),
     -5px -5px 10px rgba(255, 255, 255, 0.1);
   color: #666;
+}
+
+footer {
+  font-family: "Rubik", sans-serif;
+  position: fixed;
+  right: 0;
+  left: 0;
+  margin: auto;
+  text-align: center;
+  bottom: 5%;
+}
+.dark footer {
+  color: #fff;
 }
